# zingolib-ffi

./: .gitignore  Cargo.toml  Dockerfile  LICENSE  README.md  buildcontainer  settings.gradle.kts
.github/workflows/: build-rust.yml
gradle/: libs.versions.toml
zingolib-android/: .gitignore  gradle.properties  settings.gradle.kts
zingolib-android/gradle/: libs.versions.toml
zingolib-android/lib/: build.gradle.kts
zingolib-android/lib/src/androidTest/kotlin/org/zingolabs/zingolib_android/: LibraryTest.kt
zingolib-android/lib/src/main/kotlin/org/zingolabs/zingolib-android/: zingolib_android.kt
zingolib-android/lib/src/main/kotlin/org/zingolabs/zingolib_android/: Zingolib.kt  zingolib.kt
zingolib-ffi/: Cargo.toml  Makefile.toml  build.rs  build.sh  uniffi-bindgen.rs  uniffi.toml
zingolib-ffi/src/: lib.rs  zingolib.udl
