[workspace]
members = ["zingolib-ffi"]
resolver = "2"

[workspace.dependencies]
zingolib = { git = "https://github.com/zingolabs/zingolib.git", branch = "dev" }
zcash_primitives = "0.22.0"
android_logger = "0.11"
base64 = "0.22"
camino = "1.1.9"
http = "1.1.0"
json = "0.12.4"
lazy_static = "1.4.0"
log = "0.4"
rustls = "0.23.22"
tokio = "1.43.0"
uniffi = "0.29.1"
uniffi_build = "0.27"
