[package]
name = "zingolib-ffi"
version = "1.0.1"
authors = ["Zingolabs <zingo@zingolabs.com>"]
edition = "2021"

[dependencies]
zingolib = { workspace = true }
zcash_primitives = { workspace = true }
pepper-sync = { workspace = true }
http = "1.1.0"
lazy_static = "1.4.0"
base64 = "0.22"
android_logger = "0.11"
log = "0.4"
tokio = "1.43.0"
rustls = "0.23.22"
uniffi = { version = "0.29.1", features = ["cli"] }
camino = "1.1.9"
json = "0.12.4"

[build-dependencies]
uniffi_build = { version = "0.27", features = ["builtin-bindgen"] }

[lib]
crate-type = ["cdylib", "staticlib"]
name = "zingolib_android"

[[bin]]
name = "uniffi-bindgen"
path = "uniffi-bindgen.rs"
