[package]
name = "zingolib-ffi"
version = "1.0.1"
authors = ["Zingolabs <zingo@zingolabs.com>"]
edition = "2021"

[dependencies]
zingolib = { workspace = true }
zcash_primitives = { workspace = true }
http = { workspace = true }
lazy_static = { workspace = true }
base64 = { workspace = true }
android_logger = { workspace = true }
log = { workspace = true }
rustls = { workspace = true }
uniffi = { workspace = true, features = ["cli"] }
json = { workspace = true }

[build-dependencies]
uniffi_build = { workspace = true, features = ["builtin-bindgen"] }

[lib]
crate-type = ["cdylib", "staticlib"]
name = "zingolib_android"

[[bin]]
name = "uniffi-bindgen"
path = "uniffi-bindgen.rs"
